# QUI

./: Actions.h  CMakeLists.txt  Conditions.h  FileDisplay.C  FileDisplay.ui  FindDialog.C  GeometryConstraint.C  GeometryConstraint.h  GeometryConstraintDialog.ui  InputDialog.C  InputDialog.h  InputDialog.ui  InputDialogAvogadro.C  InputDialogLogic.C  InputDialogMenu.C  InputDialogSlots.C  Job.C  Job.h  LJParametersSection.C  Makefile  MoleculeSection.C  MoleculeSection.h  Node.h  Notes  OptionDatabase.C  OptionDatabase.h  PeriodicTable.ui  Preferences.C  Preferences.h  PreferencesBrowser.ui  Process.C  Process.h  ProcessMonitor.ui  ProcessQChemKill.C  QChemExtension.C  QChemExtension.h  QUI.pro  QUI.qrc  QtNode.C  Qui.h  (+12 more)
resources/icons/: qchem.icns  qchem.psd
